--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   
   <div class="form-box">
     <form class="myForm">
-      <label for="url">URL</label>
+      <label for="url">URL:</label>
       <input id="url" type="text" placeholder="Írjon be egy URL-t">
       <button class="submit">Keresés</button>
     </form>
